name:                crypto-token
version:             0.0.0.0
synopsis:            crypto tokens
description:         Encrypted tokens/tickets to keep state in the client side.
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto <kazu@iij.ad.jp>
maintainer:          Kazu Yamamoto <kazu@iij.ad.jp>
category:            Cryptography, Network
cabal-version:       >= 1.10
build-type:          Simple

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Crypto.Token
  build-depends:       base >= 4.9 && < 5
                     , cryptonite
                     , memory

source-repository head
  type:                 git
  location:             git://github.com/kazu-yamamoto/crypto-token
