cabal-version: >=1.10
name:          crypto-token
version:       0.0.2
license:       BSD3
license-file:  LICENSE
maintainer:    Kazu Yamamoto <kazu@iij.ad.jp>
author:        Kazu Yamamoto <kazu@iij.ad.jp>
synopsis:      crypto tokens
description:   Encrypted tokens/tickets to keep state in the client side.
category:      Cryptography, Network
build-type:    Simple

source-repository head
    type:     git
    location: git://github.com/kazu-yamamoto/crypto-token

library
    exposed-modules:  Crypto.Token
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        auto-update,
        array,
        crypton,
        memory

    if impl(ghc >=8)
        default-extensions: Strict StrictData
